--- a/Front_Allergic/client/allergic/src/components/Register/EmergencyRegister/EmergencyRegister.scss
+++ b/Front_Allergic/client/allergic/src/components/Register/EmergencyRegister/EmergencyRegister.scss
@@ -1,38 +1,67 @@
-.login{
-    &--container{
-        width: 100%;
-        img{
-            width: 100%;
-            height:37.8vh;
-        }
-    }
-    &--container--wellcome{
-        display:flex;
-        flex-direction:column;
-        align-items:flex-start;
-        width:70%;
-        padding:2vh 0vw 0vw 4vw;
+.emergency-register-container{
+    &--page{
 
-        h1{
-            font-weight:800;
-            font-size: 1.3rem;
-            margin-bottom:1.5vh;
+        display:flex;
+        align-items:center;
+        margin:3vh 4vw 1vh 4vw;
+
+
+
+        a{
+            color:#26c7dc;
+            font-weight:600;
+            font-size:0.7rem;
+            margin-bottom:1vh;
+            display:flex;
+            align-items:center;
             
         }
-        p{
-            font-weight:500;
-            line-height: 1.5rem;
+        img{
+            width:4.5vw;
         }
+        
+        p{
+            font-weight:600;
+            font-size:0.7rem;
+            margin-bottom:1vh;
+            margin:auto;
+            padding-right:14vw;
+        }
+
     }
-    &--container--form{
+    &--text{
         display:flex;
         flex-direction:column;
-        padding: 3vh 4vw 1vh 4vw;
+        justify-content:center;
+        text-align:center;
+        align-items:center;
+       
+
+        h1{
+            font-weight:600;
+            font-size:1.5rem;
+            margin:1vh 0 1vh 0;
+            padding:0 5vw 0 5vw;
+        }
+
+        p{
+            font-weight:400;
+            font-size:1rem;
+            margin:1vw 0 1vw 0;
+            padding:0 12vw 0 12vw;
+            color:#8e9296;
+        }
+
+    }
+    &--form{
+        display:flex;
+        flex-direction:column;
+        padding: 11.4vh 4vw 1vh 4vw;
         width: 88%;
 
         &--input{
             height:30px;
-            margin-bottom:2vh;
+            margin-bottom:4vh;
             border:0;
             border-bottom: solid 1px  #c7c7c7;
             &::placeholder{
@@ -40,14 +69,6 @@
             }
    
         }
-
-        p{
-            color:#26c7dc;
-            font-weight:600;
-            font-size:0.7rem;
-            margin-bottom:1vh
-        }
-
         &--button{
             margin:2vh 0 2vh 0;
             height:40px;
@@ -78,29 +99,13 @@
             }
          
         }
-
-            
-    }
-    &--container--redirect{
-        display:flex;
-        flex-direction:column;
-        align-items:center;
-        h3{
-            font-size:0.9rem;
-            color:#c7c7c7;
-            font-weight:300;
-
-        }
         a{
-            text-decoration:none;
-            color:#26C7DC;
-            font-weight:700;
-            margin:1vh 0 3vh 0;
-        }
-        p{
+            width:100%;
+            color:#26c7dc;
+            font-weight:600;
             font-size:0.7rem;
-            font-weight:500;
-            color:#26C7DC;
+            margin:2vh 0 0 0;
+            text-align:center;
         }
     }
 }
