Feat styles-register

--- a/Front_Allergic/client/allergic/src/components/Register/EmergencyRegister/EmergencyRegister.scss
+++ b/Front_Allergic/client/allergic/src/components/Register/EmergencyRegister/EmergencyRegister.scss
@@ -7,7 +7,7 @@
 
 
 
-        a{
+        h4{
             color:#26c7dc;
             font-weight:600;
             font-size:0.7rem;
@@ -99,7 +99,7 @@
             }
          
         }
-        a{
+        h5{
             width:100%;
             color:#26c7dc;
             font-weight:600;
