--- a/Front_Allergic/client/allergic/src/components/HamburguerMenu/HamburguerMenu.scss
+++ b/Front_Allergic/client/allergic/src/components/HamburguerMenu/HamburguerMenu.scss
@@ -112,6 +112,12 @@
               font-weight: 300;
           }
 
+          p{
+            color:black;
+              text-decoration:none;
+              font-weight: 300;
+          }
+
           &--img1{
               width: 30px;
               margin-right: 16px;
